@@ -2,6 +2,8 @@
 0.0.57
 ========================
 
+- added `session.locale(userdata => userdata.language)` to built-in auth mechanism
+
 ========================
 0.0.56
 ========================
